# password-manager

./: LICENSE  README.md  README.zh.md  package.json  pnpm-lock.yaml
.agent/workflows/: build_and_install_macos.md
crypte-node/: index.js  test.js
crypto-node/: index.js  package.json  test.js
docs/: doc.md  issues.md
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs
src/components/: CryptoDemo.tsx  PasswordManager.tsx
